# ddlog

./: .gitattributes
crates/arc-slice/: Cargo.toml
crates/arc-slice/src/: error.rs  lib.rs  utils.rs
crates/ddlog-db/: Cargo.toml
crates/ddlog-db/src/: lib.rs
crates/ddlog-diagnostics/: Cargo.toml
crates/ddlog-diagnostics/src/: diagnostic.rs  interner.rs  lib.rs
crates/ddlog-driver/: Cargo.toml
crates/ddlog-driver/src/: lib.rs  main.rs  panic.rs  status.rs
crates/ddlog-highlight/: Cargo.toml
crates/ddlog-hir/: Cargo.toml
crates/ddlog-hir/src/: hir.rs  lib.rs  queries.rs  resolve.rs
crates/ddlog-hir/src/lowering/: expr.rs  items.rs  mod.rs  stmt.rs  types.rs
crates/ddlog-lsp/: Cargo.toml
crates/ddlog-lsp/src/: lib.rs  session.rs
crates/ddlog-lsp/src/backend/: language_server.rs  mod.rs
crates/ddlog-lsp/src/database/: queries.rs
crates/ddlog-lsp/src/providers/: hir.rs  utils.rs
crates/ddlog-lsp/src/providers/document_symbols/: database.rs  mod.rs
crates/ddlog-lsp/src/providers/hir/: items.rs  mod.rs
crates/ddlog-lsp/src/providers/semantic_tokens/: builder.rs  highlighter.rs  mod.rs  tokens.rs
crates/ddlog-syntax/: ddlog.ungram
crates/ddlog-syntax/src/: queries.rs  visitor.rs
crates/ddlog-syntax/src/ast/: generated_ext.rs
crates/ddlog-syntax/src/parser/: mod.rs  types.rs
crates/ddlog-syntax/src/parser/item/: function.rs  structs.rs
crates/ddlog-syntax/src/validation/: mod.rs  struct_field_count.rs  too_many_struct_files.expected
crates/ddlog-syntax/tests/: filetests.rs
crates/ddlog-syntax/tests/parse/fail/: missing_tuple_comma.rast  unclosed_block.rast  unclosed_paren.rast
crates/ddlog-syntax/tests/parse/pass/: argument_attributes.dl  fibonacci.dl  function_args.dl  function_ret_ty.dl  function_types.dl  relations.rast  struct_defs.dl  struct_defs.rast  tuple_types.dl
crates/ddlog-utils/: Cargo.toml
crates/ddlog-utils/src/: arc_slice.rs  bvec.rs  lib.rs  option_ext.rs  strings.rs
crates/derive-stable-hash/: Cargo.toml
crates/derive-stable-hash/src/: lib.rs
crates/derive-stable-hash/tests/fail/: union_error.rs
crates/derive-stable-hash/tests/pass/: basic_enum.rs  basic_struct.rs  empty_types.rs
crates/stable-hash/: Cargo.toml
crates/stable-hash-derive/: Cargo.toml
crates/stable-hash-derive/src/: lib.rs
crates/stable-hash/src/: blake3_hasher.rs  cas_map.rs  lib.rs  stable_hash.rs  stable_hasher.rs  stably_hashed.rs
crates/stable-hash/tests/fail/: union_error.rs  union_error.stderr
crates/stable-hash/tests/pass/: basic_enum.rs  basic_struct.rs  empty_types.rs  tuple_struct.rs
xtask/src/codegen/generate_ast/: mod.rs
