[package]
name = "ddlog-diagnostics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ropey = "1.4.1"
cstree = "0.11.0"
ariadne = "0.1.5"
ddlog-utils = { path = "../ddlog-utils" }
stable-hash = { path = "../stable-hash" }

    [dependencies.lasso]
    version = "0.6.0"
    features = ["multi-threaded", "inline-more"]
