[package]
name = "ddlog-driver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ddlog-repl"
path = "src/bin/ddlog_repl.rs"

[dependencies]
tracing = "0.1.26"
tower-lsp = "0.16.0"
ddlog-lsp = { path = "../ddlog-lsp" }
ddlog-utils = { path = "../ddlog-utils" }
ddlog-syntax = { path = "../ddlog-syntax" }
tokio = { version = "1.10.1", features = ["full"] }
ddlog-diagnostics = { path = "../ddlog-diagnostics" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
