[package]
name = "stable-hash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1.3.1"
qp-trie = "0.8.0"
arrayvec = "0.7.2"
ddlog-utils = { path = "../ddlog-utils" }
bytemuck = { version = "1.9.1", features = ["derive"] }
stable-hash-derive = { path = "../stable-hash-derive" }

[dev-dependencies]
trybuild = "1.0.61"
